--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <!-- 代码编辑器网格 -->
                         <div v-else class="grid grid-cols-1 lg:grid-cols-2 2xl:grid-cols-3 gap-8">
                             <div v-for="s in filteredSnippets" :key="s.id"
-                                class="editor-window h-[400px] border-gray-200 dark:border-white/5 bg-white dark:bg-[#1c1c1e] shadow-sm">
+                                class="editor-window rounded-lg h-[400px] border-gray-200 dark:border-white/5 bg-white dark:bg-[#1c1c1e] shadow-sm">
                                 <!-- macOS 标题栏 -->
                                 <div
                                     class="px-4 py-3 flex items-center border-b border-gray-100 dark:border-white/5 shrink-0 bg-gray-50/50 dark:bg-[#2c2c2e]/50">
