--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="p-6 flex-1 overflow-y-auto custom-scrollbar space-y-10">
                     <!-- 类型筛选 -->
                     <div>
-                        <h3 class="text-[10px] font-black text-gray-400 uppercase tracking-widest mb-6 px-3">{{
+                        <h3 class="text-xs font-black text-gray-400 uppercase tracking-widest mb-6 px-3">{{
                             t('filter') }}</h3>
                         <nav class="space-y-1">
                             <button @click="selectedLang = ''"
@@ -115,24 +115,24 @@
                                     </svg>
                                     {{ t('allSpark') }}
                                 </span>
-                                <span class="text-[9px] opacity-40">{{ snippets.length }}</span>
+                                <span class="text-[10px] opacity-40">{{ snippets.length }}</span>
                             </button>
                             <button v-for="count, lang in langStats" :key="lang" @click="selectedLang = lang"
                                 :class="selectedLang === lang ? 'bg-indigo-600/10 text-indigo-500 font-bold' : 'text-gray-500 hover:text-indigo-500'"
                                 class="w-full flex items-center justify-between px-3 py-2 rounded-md text-xs transition uppercase">
                                 <span>{{ lang }}</span>
-                                <span class="text-[9px] opacity-40">{{ count }}</span>
+                                <span class="text-[10px] opacity-40">{{ count }}</span>
                             </button>
                         </nav>
                     </div>
 
                     <!-- 关键词云 -->
                     <div v-if="allTags.length > 0">
-                        <h3 class="text-[10px] font-black text-gray-400 uppercase tracking-widest mb-6 px-3">{{
+                        <h3 class="text-xs font-black text-gray-400 uppercase tracking-widest mb-6 px-3">{{
                             t('keywords') }}</h3>
                         <div class="flex flex-wrap gap-2 px-2">
                             <button v-for="tag in allTags" :key="tag" @click="searchQuery = tag"
-                                class="text-[10px] px-2 py-1 rounded-md border transition-all active:scale-95"
+                                class="text-xs px-2 py-1 rounded-md border transition-all active:scale-95"
                                 :class="searchQuery.toLowerCase() === tag.toLowerCase() ? 'bg-indigo-600 border-indigo-600 text-white' : 'border-gray-200 dark:border-white/10 text-gray-500 hover:border-indigo-500 hover:text-indigo-500'">
                                 #{{ tag }}
                             </button>
@@ -164,7 +164,7 @@
                         <!-- 代码编辑器网格 -->
                         <div v-else class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
                             <div v-for="s in filteredSnippets" :key="s.id"
-                                class="editor-window rounded-lg h-[320px] border-gray-200 dark:border-white/5 bg-white dark:bg-[#1c1c1e] shadow-sm">
+                                class="editor-window rounded-lg border-gray-200 dark:border-white/5 bg-white dark:bg-[#1c1c1e] shadow-sm flex flex-col" style="height: auto; min-height: 300px; max-height: 400px;">
                                 <!-- macOS 标题栏 -->
                                 <div
                                     class="px-4 py-3 flex items-center border-b border-gray-100 dark:border-white/5 shrink-0 bg-gray-50/50 dark:bg-[#2c2c2e]/50">
@@ -174,11 +174,11 @@
                                         <div class="w-3 h-3 rounded-full bg-[#27c93f] shadow-sm"></div>
                                     </div>
                                     <div
-                                        class="ml-4 text-[11px] font-bold flex-1 truncate uppercase tracking-widest opacity-40">
+                                        class="ml-4 text-xs font-bold flex-1 truncate uppercase tracking-widest opacity-40">
                                         {{ s.title }}</div>
                                     <div class="flex items-center gap-2 shrink-0">
                                         <span :class="getLangTagStyle(s.lang)"
-                                            class="px-1.5 py-0.5 rounded text-[9px] font-black uppercase shadow-sm">{{
+                                            class="px-2 py-0.5 rounded text-[10px] font-black uppercase shadow-sm">{{
                                             s.lang }}</span>
                                         <button @click.stop="openModal('edit', s)"
                                             class="text-gray-400 hover:text-indigo-500 transition p-1.5 rounded hover:bg-indigo-500/10"
@@ -203,7 +203,7 @@
 
                                 <!-- 代码区 -->
                                 <div class="relative flex-grow overflow-hidden group/code bg-white dark:bg-[#000000]">
-                                    <pre class="code-font text-[14px] p-5 h-full overflow-y-auto leading-relaxed cursor-pointer transition-colors hljs"
+                                    <pre class="code-font text-base p-5 h-full overflow-y-auto leading-relaxed cursor-pointer transition-colors hljs"
                                         @click="copy(s.code)"><code :class="'language-' + getLanguageAlias(s.lang)" v-html="highlightCode(s.code, s.lang)"></code></pre>
                                     <div
                                         class="absolute inset-0 bg-indigo-500/5 opacity-0 group-hover/code:opacity-100 transition-all flex items-center justify-center backdrop-blur-[1px]">
@@ -218,7 +218,7 @@
                                     class="px-4 py-2.5 border-t border-gray-100 dark:border-white/5 flex items-center shrink-0 bg-gray-50/50 dark:bg-[#141417]">
                                     <div class="flex flex-wrap gap-2 overflow-hidden">
                                         <button v-for="tag in s.tags" :key="tag" @click="searchQuery = tag"
-                                            class="text-[10px] font-bold text-gray-400 hover:text-indigo-500 transition-colors uppercase">#{{ tag }}</button>
+                                            class="text-xs font-bold text-gray-400 hover:text-indigo-500 transition-colors uppercase">#{{ tag }}</button>
                                     </div>
                                 </div>
                             </div>
