--- a/index.html
+++ b/index.html
@@ -176,10 +176,31 @@
                                     <div
                                         class="ml-4 text-xs font-bold flex-1 truncate uppercase tracking-widest opacity-40">
                                         {{ s.title }}</div>
-                                    <div class="flex items-center gap-2 shrink-0">
-                                        <span :class="getLangTagStyle(s.lang)"
-                                            class="px-2 py-0.5 rounded text-[10px] font-black uppercase shadow-sm">{{
-                                            s.lang }}</span>
+                                    <span :class="getLangTagStyle(s.lang)"
+                                        class="px-2 py-0.5 rounded text-[10px] font-black uppercase shadow-sm shrink-0">{{
+                                        s.lang }}</span>
+                                </div>
+
+                                <!-- 代码区 -->
+                                <div class="relative flex-grow overflow-hidden group/code bg-white dark:bg-[#000000]">
+                                    <pre class="code-font text-base p-5 h-full overflow-hidden leading-relaxed cursor-pointer transition-colors hljs"
+                                        @click="copy(s.code)"><code :class="'language-' + getLanguageAlias(s.lang)" v-html="highlightCode(s.code, s.lang)"></code></pre>
+                                    <div
+                                        class="absolute inset-0 bg-indigo-500/5 opacity-0 group-hover/code:opacity-100 transition-all flex items-center justify-center backdrop-blur-[1px]">
+                                        <button @click.stop="copy(s.code)"
+                                            class="bg-indigo-600 text-white px-4 py-1.5 rounded-lg font-black text-[10px] shadow-2xl active:scale-95 transition-all uppercase tracking-widest">{{
+                                            t('copyInsight') }}</button>
+                                    </div>
+                                </div>
+
+                                <!-- 底部标签栏 -->
+                                <div
+                                    class="px-4 py-2.5 border-t border-gray-100 dark:border-white/5 flex justify-between items-center shrink-0 bg-gray-50/50 dark:bg-[#141417]">
+                                    <div class="flex flex-wrap gap-2 overflow-hidden">
+                                        <button v-for="tag in s.tags" :key="tag" @click="searchQuery = tag"
+                                            class="text-xs font-bold text-gray-400 hover:text-indigo-500 transition-colors uppercase">#{{ tag }}</button>
+                                    </div>
+                                    <div class="flex gap-3 ml-4 shrink-0">
                                         <button @click.stop="openModal('edit', s)"
                                             class="text-gray-400 hover:text-indigo-500 transition p-1.5 rounded hover:bg-indigo-500/10"
                                             :title="t('refineSpark')">
@@ -198,27 +219,6 @@
                                                 </path>
                                             </svg>
                                         </button>
-                                    </div>
-                                </div>
-
-                                <!-- 代码区 -->
-                                <div class="relative flex-grow overflow-hidden group/code bg-white dark:bg-[#000000]">
-                                    <pre class="code-font text-base p-5 h-full overflow-y-auto leading-relaxed cursor-pointer transition-colors hljs"
-                                        @click="copy(s.code)"><code :class="'language-' + getLanguageAlias(s.lang)" v-html="highlightCode(s.code, s.lang)"></code></pre>
-                                    <div
-                                        class="absolute inset-0 bg-indigo-500/5 opacity-0 group-hover/code:opacity-100 transition-all flex items-center justify-center backdrop-blur-[1px]">
-                                        <button @click.stop="copy(s.code)"
-                                            class="bg-indigo-600 text-white px-4 py-1.5 rounded-lg font-black text-[10px] shadow-2xl active:scale-95 transition-all uppercase tracking-widest">{{
-                                            t('copyInsight') }}</button>
-                                    </div>
-                                </div>
-
-                                <!-- 底部标签栏 -->
-                                <div
-                                    class="px-4 py-2.5 border-t border-gray-100 dark:border-white/5 flex items-center shrink-0 bg-gray-50/50 dark:bg-[#141417]">
-                                    <div class="flex flex-wrap gap-2 overflow-hidden">
-                                        <button v-for="tag in s.tags" :key="tag" @click="searchQuery = tag"
-                                            class="text-xs font-bold text-gray-400 hover:text-indigo-500 transition-colors uppercase">#{{ tag }}</button>
                                     </div>
                                 </div>
                             </div>
@@ -348,16 +348,23 @@
                             <div class="space-y-2">
                                 <label class="text-[10px] font-black text-gray-500 uppercase tracking-widest ml-1">{{
                                     t('fieldType') }}</label>
-                                <select v-model="form.lang"
-                                    class="w-full border-none p-4 rounded-lg outline-none focus:ring-2 focus:ring-indigo-500/50 text-sm font-bold uppercase appearance-none cursor-pointer bg-gray-100 dark:bg-black text-gray-900 dark:text-white">
-                                    <option value="JS">JavaScript</option>
-                                    <option value="R">R Language</option>
-                                    <option value="PYTHON">Python</option>
-                                    <option value="YAML">YAML</option>
-                                    <option value="SQL">SQL</option>
-                                    <option value="MD">Markdown</option>
-                                    <option value="TEXT">Plain Text</option>
-                                </select>
+                                <div class="relative">
+                                    <select v-model="form.lang"
+                                        class="w-full border-none p-4 pl-12 rounded-lg outline-none focus:ring-2 focus:ring-indigo-500/50 text-sm font-semibold appearance-none cursor-pointer bg-gray-100 dark:bg-black text-gray-900 dark:text-white">
+                                        <option value="JS">JavaScript</option>
+                                        <option value="R">R Language</option>
+                                        <option value="PYTHON">Python</option>
+                                        <option value="YAML">YAML</option>
+                                        <option value="SQL">SQL</option>
+                                        <option value="MD">Markdown</option>
+                                        <option value="TEXT">Plain Text</option>
+                                    </select>
+                                    <div class="absolute left-4 top-1/2 -translate-y-1/2 w-3 h-3 rounded-full"
+                                        :class="getLangColorDot(form.lang)"></div>
+                                    <svg class="absolute right-4 top-1/2 -translate-y-1/2 w-5 h-5 text-gray-400 pointer-events-none" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+                                    </svg>
+                                </div>
                             </div>
                         </div>
                         <div class="space-y-2">
