--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
 
             <!-- 右侧功能区 -->
             <div class="flex items-center gap-3 shrink-0">
+                <button v-if="isConnected && currentView === 'list'" @click="openModal('add')"
+                    class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-1.5 rounded-lg text-xs font-bold transition btn-press shadow-lg shadow-indigo-500/20">
+                    {{ t('newSnip') }}
+                </button>
+
                 <!-- 主题切换 -->
                 <button @click="toggleTheme"
                     class="p-2 rounded-lg transition btn-press hover:bg-gray-100 dark:hover:bg-white/10"
@@ -78,10 +83,14 @@
                     {{ currentLang === 'zh' ? 'EN' : 'ZH' }}
                 </button>
 
-                <button v-if="isConnected && currentView === 'list'" @click="openModal('add')"
-                    class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-1.5 rounded-lg text-xs font-bold transition btn-press shadow-lg shadow-indigo-500/20">
-                    {{ t('newSnip') }}
-                </button>
+                <!-- GitHub链接 -->
+                <a href="https://github.com/shalom-lab/Spark" target="_blank" rel="noopener noreferrer"
+                    class="p-2 rounded-lg transition btn-press hover:bg-gray-100 dark:hover:bg-white/10 text-gray-600 dark:text-gray-400"
+                    title="GitHub仓库">
+                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                        <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd"></path>
+                    </svg>
+                </a>
 
                 <button @click="toggleSettings"
                     :class="currentView === 'settings' ? 'bg-indigo-600 text-white' : 'text-gray-400 hover:bg-gray-100 dark:hover:bg-white/10'"
@@ -164,7 +173,7 @@
                         <!-- 代码编辑器网格 -->
                         <div v-else class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
                             <div v-for="s in filteredSnippets" :key="s.id"
-                                class="editor-window rounded-lg border-gray-200 dark:border-white/5 bg-white dark:bg-[#1c1c1e] shadow-sm flex flex-col" style="height: auto; min-height: 300px; max-height: 400px;">
+                                class="editor-window rounded-lg border-gray-200 dark:border-white/5 bg-white dark:bg-[#1c1c1e] shadow-sm flex flex-col relative" style="height: auto; min-height: 300px; max-height: 400px;">
                                 <!-- macOS 标题栏 -->
                                 <div
                                     class="px-4 py-3 flex items-center border-b border-gray-100 dark:border-white/5 shrink-0 bg-gray-50/50 dark:bg-[#2c2c2e]/50">
@@ -184,7 +193,7 @@
                                 <!-- 代码区 -->
                                 <div class="relative flex-grow overflow-hidden group/code bg-white dark:bg-[#000000]">
                                     <pre class="code-font text-base p-5 h-full overflow-hidden leading-relaxed cursor-pointer transition-colors hljs"
-                                        @click="copy(s.code)"><code :class="'language-' + getLanguageAlias(s.lang)" v-html="highlightCode(s.code, s.lang)"></code></pre>
+                                        @click="copy(s.code)" style="overflow-x: hidden; overflow-y: hidden;"><code :class="'language-' + getLanguageAlias(s.lang)" v-html="highlightCode(s.code, s.lang)"></code></pre>
                                     <div
                                         class="absolute inset-0 bg-indigo-500/5 opacity-0 group-hover/code:opacity-100 transition-all flex items-center justify-center backdrop-blur-[1px]">
                                         <button @click.stop="copy(s.code)"
@@ -195,31 +204,33 @@
 
                                 <!-- 底部标签栏 -->
                                 <div
-                                    class="px-4 py-2.5 border-t border-gray-100 dark:border-white/5 flex justify-between items-center shrink-0 bg-gray-50/50 dark:bg-[#141417]">
+                                    class="px-4 py-2.5 border-t border-gray-100 dark:border-white/5 flex items-center shrink-0 bg-gray-50/50 dark:bg-[#141417]">
                                     <div class="flex flex-wrap gap-2 overflow-hidden">
                                         <button v-for="tag in s.tags" :key="tag" @click="searchQuery = tag"
                                             class="text-xs font-bold text-gray-400 hover:text-indigo-500 transition-colors uppercase">#{{ tag }}</button>
                                     </div>
-                                    <div class="flex gap-3 ml-4 shrink-0">
-                                        <button @click.stop="openModal('edit', s)"
-                                            class="text-gray-400 hover:text-indigo-500 transition p-1.5 rounded hover:bg-indigo-500/10"
-                                            :title="t('refineSpark')">
-                                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5"
-                                                    d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z">
-                                                </path>
-                                            </svg>
-                                        </button>
-                                        <button @click.stop="deleteSnippet(s.id)"
-                                            class="text-gray-400 hover:text-red-500 transition p-1.5 rounded hover:bg-red-500/10"
-                                            title="删除">
-                                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5"
-                                                    d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16">
-                                                </path>
-                                            </svg>
-                                        </button>
-                                    </div>
+                                </div>
+
+                                <!-- 编辑和删除按钮 - 右下角 -->
+                                <div class="absolute bottom-3 right-3 flex gap-2 z-10">
+                                    <button @click.stop="openModal('edit', s)"
+                                        class="text-gray-400 hover:text-indigo-500 transition p-2 rounded-lg hover:bg-indigo-500/10 backdrop-blur-sm bg-white/80 dark:bg-black/80"
+                                        :title="t('refineSpark')">
+                                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5"
+                                                d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z">
+                                            </path>
+                                        </svg>
+                                    </button>
+                                    <button @click.stop="deleteSnippet(s.id)"
+                                        class="text-gray-400 hover:text-red-500 transition p-2 rounded-lg hover:bg-red-500/10 backdrop-blur-sm bg-white/80 dark:bg-black/80"
+                                        title="删除">
+                                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5"
+                                                d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16">
+                                            </path>
+                                        </svg>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -352,7 +363,7 @@
                                     <select v-model="form.lang"
                                         class="w-full border-none p-4 pl-12 rounded-lg outline-none focus:ring-2 focus:ring-indigo-500/50 text-sm font-semibold appearance-none cursor-pointer bg-gray-100 dark:bg-black text-gray-900 dark:text-white">
                                         <option value="JS">JavaScript</option>
-                                        <option value="R">R Language</option>
+                                        <option value="R">R</option>
                                         <option value="PYTHON">Python</option>
                                         <option value="YAML">YAML</option>
                                         <option value="SQL">SQL</option>
@@ -384,7 +395,7 @@
                     <div
                         class="px-8 py-6 border-t border-gray-100 dark:border-white/5 flex justify-end gap-6 shrink-0 bg-gray-50/50 dark:bg-black/20">
                         <button @click="modal.show = false"
-                            class="px-6 py-3 text-gray-400 font-bold hover:text-gray-600 dark:hover:text-gray-200 transition uppercase text-[10px] tracking-widest">{{
+                            class="px-6 py-3 bg-gray-100 dark:bg-white/10 text-gray-600 dark:text-gray-300 font-bold hover:bg-gray-200 dark:hover:bg-white/20 rounded-lg transition uppercase text-[10px] tracking-widest">{{
                             t('discard') }}</button>
                         <button @click="saveSnippet" :disabled="syncing"
                             class="px-10 py-3 bg-indigo-600 text-white font-black rounded-lg hover:bg-indigo-700 transition btn-press text-xs tracking-widest uppercase">
