--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <h3 class="text-xs font-black text-gray-400 uppercase tracking-widest mb-6 px-3">{{
                             t('keywords') }}</h3>
                         <div class="flex flex-wrap gap-2 px-2">
-                            <button v-for="tag in allTags" :key="tag" @click="searchQuery = tag"
+                            <button v-for="tag in allTags" :key="tag" @click="toggleTag(tag)"
                                 class="text-xs px-2 py-1 rounded-md border transition-all active:scale-95"
                                 :class="searchQuery.toLowerCase() === tag.toLowerCase() ? 'bg-indigo-600 border-indigo-600 text-white' : 'border-gray-200 dark:border-white/10 text-gray-500 hover:border-indigo-500 hover:text-indigo-500'">
                                 #{{ tag }}
@@ -206,7 +206,7 @@
                                 <div
                                     class="px-4 py-2.5 border-t border-gray-100 dark:border-white/5 flex items-center shrink-0 bg-gray-50/50 dark:bg-[#141417]">
                                     <div class="flex flex-wrap gap-2 overflow-hidden">
-                                        <button v-for="tag in s.tags" :key="tag" @click="searchQuery = tag"
+                                        <button v-for="tag in s.tags" :key="tag" @click="toggleTag(tag)"
                                             class="text-xs font-bold text-gray-400 hover:text-indigo-500 transition-colors uppercase">#{{ tag }}</button>
                                     </div>
                                 </div>
@@ -274,14 +274,6 @@
                                             class="w-full border-none p-4 rounded-lg outline-none focus:ring-2 focus:ring-indigo-500/50 text-sm font-semibold bg-gray-100 dark:bg-black text-gray-900 dark:text-white">
                                     </div>
                                 </div>
-                                <div class="space-y-3">
-                                    <label
-                                        class="text-[10px] font-black text-gray-500 uppercase tracking-widest ml-1 block">{{
-                                        t('masterPassword') }}</label>
-                                    <input type="password" v-model="masterPassword"
-                                        :placeholder="t('masterPasswordPlaceholder')"
-                                        class="w-full border-none p-4 rounded-lg outline-none focus:ring-2 focus:ring-indigo-500/50 text-sm font-semibold bg-gray-100 dark:bg-black text-gray-900 dark:text-white">
-                                </div>
                                 <button @click="saveConfig"
                                     class="w-full py-4 bg-indigo-600 text-white font-black rounded-lg hover:bg-indigo-700 transition btn-press tracking-widest text-xs uppercase shadow-lg shadow-indigo-500/20">{{
                                     t('saveBtn') }}</button>
@@ -321,10 +313,6 @@
                                         t('downloadJSON') }} →</button>
                                 </div>
                             </div>
-
-                            <button @click="logout"
-                                class="w-full py-4 text-[10px] font-black text-red-500 border border-red-200 dark:border-red-900/30 rounded-lg hover:bg-red-50 dark:hover:bg-red-500/5 transition uppercase tracking-[0.2em]">{{
-                                t('logoutBtn') }}</button>
                         </div>
                     </div>
                 </transition>
