--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <div class="flex flex-wrap gap-2 px-2">
                             <button v-for="tag in allTags" :key="tag" @click="toggleTag(tag)"
                                 class="text-xs px-2 py-1 rounded-md border transition-all active:scale-95"
-                                :class="searchQuery.toLowerCase() === tag.toLowerCase() ? 'bg-indigo-600 border-indigo-600 text-white' : 'border-gray-200 dark:border-white/10 text-gray-500 hover:border-indigo-500 hover:text-indigo-500'">
+                                :class="searchQuery.toLowerCase() === tag.toLowerCase() ? 'bg-indigo-600 border-indigo-600 text-white' : getTagColor(tag)">
                                 #{{ tag }}
                             </button>
                         </div>
