--- a/index.html
+++ b/index.html
@@ -204,33 +204,32 @@
 
                                 <!-- 底部标签栏 -->
                                 <div
-                                    class="px-4 py-2.5 border-t border-gray-100 dark:border-white/5 flex items-center shrink-0 bg-gray-50/50 dark:bg-[#141417]">
+                                    class="px-4 py-2.5 border-t border-gray-100 dark:border-white/5 flex items-center justify-between shrink-0 bg-gray-50/50 dark:bg-[#141417] relative">
                                     <div class="flex flex-wrap gap-2 overflow-hidden">
                                         <button v-for="tag in s.tags" :key="tag" @click="toggleTag(tag)"
                                             class="text-xs font-bold text-gray-400 hover:text-indigo-500 transition-colors uppercase">#{{ tag }}</button>
                                     </div>
-                                </div>
-
-                                <!-- 编辑和删除按钮 - 右下角 -->
-                                <div class="absolute bottom-3 right-3 flex gap-2 z-10">
-                                    <button @click.stop="openModal('edit', s)"
-                                        class="text-gray-400 hover:text-indigo-500 transition p-2 rounded-lg hover:bg-indigo-500/10 backdrop-blur-sm bg-white/80 dark:bg-black/80"
-                                        :title="t('refineSpark')">
-                                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5"
-                                                d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z">
-                                            </path>
-                                        </svg>
-                                    </button>
-                                    <button @click.stop="deleteSnippet(s.id)"
-                                        class="text-gray-400 hover:text-red-500 transition p-2 rounded-lg hover:bg-red-500/10 backdrop-blur-sm bg-white/80 dark:bg-black/80"
-                                        title="删除">
-                                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5"
-                                                d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16">
-                                            </path>
-                                        </svg>
-                                    </button>
+                                    <!-- 编辑和删除按钮 - 右下角 -->
+                                    <div class="flex gap-2 ml-4 shrink-0">
+                                        <button @click.stop="openModal('edit', s)"
+                                            class="text-gray-400 hover:text-indigo-500 transition p-1.5 rounded hover:bg-indigo-500/10"
+                                            :title="t('refineSpark')">
+                                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5"
+                                                    d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z">
+                                                </path>
+                                            </svg>
+                                        </button>
+                                        <button @click.stop="deleteSnippet(s.id)"
+                                            class="text-gray-400 hover:text-red-500 transition p-1.5 rounded hover:bg-red-500/10"
+                                            title="删除">
+                                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5"
+                                                    d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16">
+                                                </path>
+                                            </svg>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -431,7 +430,7 @@
         </transition>
 
         <!-- 吐司通知中心 -->
-        <div class="fixed bottom-10 right-10 z-[250] flex flex-col gap-4 pointer-events-none">
+        <div class="fixed top-10 right-10 z-[250] flex flex-col gap-4 pointer-events-none">
             <transition-group name="view-fade">
                 <div v-for="t in toasts" :key="t.id"
                     :class="t.type === 'error' ? 'bg-red-600' : 'bg-indigo-600 shadow-2xl shadow-indigo-500/20'"
