--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
                     <!-- 设置视图 -->
                     <div v-else key="settings-view" class="p-8 md:p-16 max-w-4xl mx-auto space-y-16">
                         <div class="flex items-center justify-between">
-                            <div>
-                                <h2 class="text-3xl font-black tracking-tight uppercase italic">{{ t('settingsTitle') }}
+                            <div class="ml-4">
+                                <h2 class="text-3xl font-black tracking-tight uppercase">{{ t('settingsTitle') }}
                                 </h2>
                                 <p
                                     class="text-[10px] text-gray-500 font-bold uppercase tracking-widest mt-2 opacity-60">
